nav logo icon visibiity for mobile devices fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+#nav-icon-visible{
+ 	font-size: 2.1rem;
+ 	display:normal;
+ }
+
 .card .card-toolbar {
  display:flex;
  padding:24px;
@@ -18,8 +23,16 @@
 	float:right;
 }
 
+
+
 @media only screen and (min-width: 993px) {
  nav a.sidenav-trigger {
   display:inline;
+ }
+}
+
+@media only screen and (max-width: 379px){
+  #nav-icon-visible{
+ 	display: none;
  }
 }
